--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -9,8 +9,8 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <input type="text" class = "datetime-picker" id="datetime-picker" />
+    <button type="button"  data-start>Start</button>
 
     <div class="timer">
       <div class="field">
